Tests for pre-trace and fix chopping for conjunction of traces (test): - the conjunction was treated as concatenation (chop)